--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,22 @@
 Package: ggsegAicha
 Title: aicha datasets for the ggseg-plotting tool
 Version: 0.0.1
-Authors@R: c(person("First name", 
-                    "Last name", 
-                    email = "", 
+Authors@R: c(person("Athanasia Mo", "Mowinckel", 
+                    email = "a.m.mowinckel@psykologi.uio.no", 
                     role = c("aut", "cre"),
-                    comment = c(ORCID = "")))
+                    comment = c(ORCID = "0000-0002-5756-0223")))
 Description: This is a support package for the ggseg, and ggseg3d packages.
     It contains the aicha atlases to plot using functions from those two packages.
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 7.1.1
-Depends: R (>= 2.10)
+Depends: 
+    R (>= 3.5.0),
+    ggseg,
+    ggseg3d
 LazyData: true
 LazyDataCompression: xz
 Suggests:
-    ggseg,
-    ggseg3d,
     ggplot2,
     tidyr,
     knitr,
